fixed infobutton alignment

--- a/client/src/app/user/task/quiz/quiz-multiplechoice/quiz-multiplechoice.component.css
+++ b/client/src/app/user/task/quiz/quiz-multiplechoice/quiz-multiplechoice.component.css
@@ -8,6 +8,10 @@
 }
 
 
+#hint{
+  vertical-align: middle;
+}
+
 button{
   width: 90%;
   margin: 10px;
