--- a/client/src/app/user/task/quiz/quiz-singleanswer/quiz-singleanswer.component.css
+++ b/client/src/app/user/task/quiz/quiz-singleanswer/quiz-singleanswer.component.css
@@ -12,6 +12,10 @@ mat-toolbar{
   background-color: #3f51b5;
 }
 
+#hint{
+  vertical-align: middle;
+}
+
 .container_bottom{
   color: white;
 }
